# omnia-backend

./: .env.example  .gitignore  Cargo.toml  README.md  canister_ids.json  dfx.json  ledger.public.did  package-lock.json  package.json  tsconfig.json
.devcontainer/: Dockerfile  devcontainer.json
__tests__/: backend.test.ts
__tests__/utils/: actors.ts  application.ts  cli.ts  constants.ts  identity.ts  sparql-client.ts
__tests__/utils/omniaApi/: canisterEnv.ts  http.ts  omniaApi.ts  resultParser.ts
docs/: access-key.md  architecture.md  rdf-database.md
omnia_gateway/frontend/: craco.config.js  package-lock.json
omnia_gateway/frontend/src/components/: EnvironmentQRCode.tsx  RegisterEnvironment.tsx
omnia_gateway/frontend/src/interfaces/: environments.ts
omnia_main/: .env.example  .gitignore  Cargo.toml  README.md  dfx.json  jest.config.js  package-lock.json  package.json  tsconfig.json  webpack.config.js
omnia_main/__tests__/: backend.test.ts  gateway.test.ts  manager.test.ts  omnia_backend.test.ts  virtual-persona.test.ts
omnia_main/__tests__/utils/: actors.ts  constants.ts  omniaApi.ts  sparql-client.ts
omnia_main/__tests__/utils/omniaApi/: canisterEnv.ts  http.ts  index.ts  nonce.ts  omniaApi.ts
omnia_main/scripts/: build.sh  check-dids.sh  deploy.sh  generate-dids.sh
omnia_main/src/database/: Cargo.toml  database.did
omnia_main/src/database/src/: auth.rs  environment.rs  lib.rs  profile.rs  uuid.rs  virtual_persona.rs
omnia_main/src/database/src/environment/: interface_types.rs  store_types.rs  utils.rs
omnia_main/src/database/src/profile/: store_types.rs  utils.rs
omnia_main/src/environments_db/: Cargo.toml  environments_db.did
omnia_main/src/environments_db/src/: lib.rs
omnia_main/src/omnia_backend/: Cargo.toml  omnia_backend.did
omnia_main/src/omnia_backend/src/: http_endpoint.rs  lib.rs  manager.rs  outcalls.rs  rdf.rs  stores.rs  user.rs  utils.rs
omnia_main/src/omnia_gateway_frontend/: craco.config.js  package-lock.json  package.json
omnia_main/src/omnia_gateway_frontend/public/: index.html
omnia_main/src/omnia_gateway_frontend/src/: App.tsx
omnia_main/src/omnia_gateway_frontend/src/components/: Home.tsx  RegisterEnvironment.tsx
omnia_main/src/omnia_gateway_frontend/src/interfaces/: environments.ts
omnia_main/src/omnia_main_backend/: Cargo.toml  omnia_main_backend.did
omnia_main/src/omnia_main_frontend/: package-lock.json  package.json
omnia_main/src/omnia_main_frontend/public/: index.html
omnia_main/src/omnia_main_frontend/src/: App.css  App.tsx  index.html  index.js
omnia_main/src/omnia_manager_frontend/: package-lock.json  package.json
omnia_main/src/omnia_manager_frontend/src/: App.tsx
omnia_main/src/omnia_manager_frontend/src/components/: DataView.tsx  Devices.tsx  EnvironmentDashboard.css  EnvironmentDashboard.tsx  Gateways.tsx  Home.tsx  RegisterEnvironment.tsx
omnia_main/src/omnia_manager_frontend/src/contexts/: ProfileContext.tsx
omnia_main/src/omnia_manager_frontend/src/interfaces/: environments.ts  profile.ts  result.ts
omnia_main/src/omnia_manager_frontend/src/services/: devices.ts  errors.ts  gateways.ts  localStorage.ts
omnia_main/src/omnia_manager_frontend/src/utils/: resultParser.ts
omnia_main/src/omnia_types/: Cargo.toml
omnia_main/src/omnia_types/src/: affordance.rs  device.rs  environment.rs  errors.rs  gateway.rs  http.rs  lib.rs  updates.rs  user.rs  utils.rs  virtual_persona.rs
omnia_main/src/omnia_user_frontend/: package-lock.json  package.json
omnia_main/src/omnia_user_frontend/src/: App.tsx
omnia_main/src/omnia_user_frontend/src/components/: GenericMessage.css  GenericMessage.tsx  Home.tsx
omnia_main/src/omnia_user_frontend/src/contexts/: ProfileContext.tsx
omnia_main/src/omnia_user_frontend/src/interfaces/: profile.ts  result.ts
omnia_main/src/omnia_utils/: Cargo.toml
omnia_main/src/omnia_utils/src/: constants.rs  lib.rs  net.rs  uuid.rs
omnia_main/src/user_profile_backend/: Cargo.toml  profile.did
omnia_main/src/user_profile_backend/src/: lib.rs
scripts/: deploy.sh  generate-dids.sh  generate-types.sh
src/application_placeholder/: Cargo.toml  application_placeholder.did
src/application_placeholder/src/: lib.rs
src/database/: Cargo.toml  database.did
src/database/src/: access_key.rs  auth.rs  environment.rs  lib.rs  random.rs  request_key.rs  utils.rs  virtual_persona.rs
src/omnia_backend/: Cargo.toml  omnia_backend.did
src/omnia_backend/src/: constants.rs  http_endpoint.rs  lib.rs  manager.rs  rdf.rs  user.rs  utils.rs
src/omnia_manager_frontend/public/: index.html
src/omnia_manager_frontend/src/contexts/: EnvironmentContext.tsx
src/omnia_manager_frontend/src/services/: devices.ts
src/omnia_manager_frontend/src/utils/: localStorage.ts
src/omnia_types/: Cargo.toml
src/omnia_types/src/: access_key.rs  device.rs  environment.rs  errors.rs  gateway.rs  http.rs  lib.rs  request_key.rs  signature.rs  updates.rs  virtual_persona.rs
src/omnia_user_frontend/: package.json
src/omnia_user_frontend/public/: sample-asset.txt
src/omnia_user_frontend/src/: App.tsx
src/omnia_user_frontend/src/contexts/: ProfileContext.tsx
src/omnia_user_frontend/src/services/: authClient.ts  errors.ts
src/omnia_utils/: Cargo.toml
src/omnia_utils/src/: constants.rs  hash.rs  ic.rs  lib.rs  random.rs
src/scripts/: Cargo.toml
