[package]
name = "omnia_backend"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.8.4"
ic-cdk = "0.7.4"
ic-cdk-macros = "0.6.10"
serde = "1.0.111"
serde_json = "1.0.93"
omnia_types = { path = "../omnia_types" }
omnia_utils = { path = "../omnia_utils" }
ic-oxigraph = { git = "https://github.com/omnia-network/ic-oxigraph.git", version = "0.3.17-dev" }
ciborium = "0.2.1"
sparesults = { git = "https://github.com/omnia-network/ic-oxigraph.git", version = "0.1.8-dev" }
rand = "0.8.5"
getrandom = { version = "0.2.9", features = ["custom"] }
ic-cdk-timers = "0.1.2"
ic-ledger-types = "0.5.0"
