[package]
name = "omnia_types"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib"]

[dependencies]
candid = "0.8.4"
ic-cdk = "0.9.2"
ic-stable-structures = "0.5.5"
omnia-core-sdk = { git = "https://github.com/omnia-network/omnia-sdk", rev = "542265a977d9968da5945e660884c5cf8b00e09e", version = "0.1.0" }
serde = "1.0.111"
sha2 = "0.10.7"
