[package]
name = "omnia_utils"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib"]

[dependencies]
candid = "0.8.4"
ic-cdk = "0.8.1"
getrandom = { version = "0.2", features = ["custom"] }
rand = "0.8.5"
hex = "0.4.3"
rand_chacha = { version = "*", default-features = false }
uuid = { version = "1.3.2", features = ["v4"] }
ic-ledger-types = "0.5.0"
ic-cdk-timers = "0.2.0"
