[package]
name = "omnia_utils"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib"]

[dependencies]
candid = "0.8.4"
ic-cdk = "0.9.2"
ic-ledger-types = "0.5.0"
ic-cdk-timers = "0.2.0"
sha2 = "0.10.7"
omnia_types = { path = "../omnia_types" }
serde_cbor = "0.11.2"
