[package]
name = "omnia_utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib"]

[dependencies]
candid = "0.7.14"
ic-cdk = "0.5.2"
getrandom = { version = "0.2", features = ["custom"] }
rand = "0.8.5"
hex = "0.4.3"
rand_chacha = { version = "*", default-features = false }
